Add notebook for adding features to dataset

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lward/miniconda3/envs/batdata/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/lward/miniconda3/envs/camp/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4fdfdbc8-6be0-49e6-b774-f588c422840b",
    "metadata": {},
    "outputs": [
@@ -865,21 +865,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "successes=569: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 570/570 [29:56<00:00,  3.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succeeded in parsing 569 cells\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "successes=560:  98%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▍   | 561/570 [31:16<00:25,  2.82s/it]"
      ]
     }
    ],
@@ -940,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "be458191-b47d-44f1-a66f-2ebc762383a0",
    "metadata": {},
    "outputs": [],
@@ -958,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b2ddd741-eea4-4d35-a30c-a7ae2f614dc0",
    "metadata": {},
    "outputs": [],
@@ -968,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "db14e3fc-a649-45f2-8f33-d6954cbb0e09",
    "metadata": {},
    "outputs": [],
@@ -978,77 +964,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "42cc8330-bd3e-47ea-91d3-ebcdf371c02d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"name\": \"CAMP_batch_B21A_cell_4\",\n",
-      "  \"battery\": {\n",
-      "    \"layer_count\": 12,\n",
-      "    \"anode\": {\n",
-      "      \"name\": \"C\",\n",
-      "      \"supplier\": \"Conoco-Phillips\",\n",
-      "      \"product\": \"A12\",\n",
-      "      \"thickness\": 161.0,\n",
-      "      \"loading\": 11.2,\n",
-      "      \"porosity\": 35.7\n",
-      "    },\n",
-      "    \"cathode\": {\n",
-      "      \"name\": \"HE5050\",\n",
-      "      \"supplier\": \"Merf\",\n",
-      "      \"product\": \"Batch 2\",\n",
-      "      \"thickness\": 121.0,\n",
-      "      \"area\": 169.2,\n",
-      "      \"loading\": 12.99,\n",
-      "      \"porosity\": 43.0\n",
-      "    },\n",
-      "    \"electrolyte\": {\n",
-      "      \"name\": \"Gen 2\",\n",
-      "      \"additives\": []\n",
-      "    },\n",
-      "    \"nominal_capacity\": 0.4\n",
-      "  },\n",
-      "  \"dataset_name\": \"paulson_2019\",\n",
-      "  \"authors\": [\n",
-      "    [\n",
-      "      \"Noah H.\",\n",
-      "      \"Paulson\"\n",
-      "    ],\n",
-      "    [\n",
-      "      \"Joseph\",\n",
-      "      \"Kubal\"\n",
-      "    ],\n",
-      "    [\n",
-      "      \"Logan\",\n",
-      "      \"Ward\"\n",
-      "    ],\n",
-      "    [\n",
-      "      \"Saurabh\",\n",
-      "      \"Saxena\"\n",
-      "    ],\n",
-      "    [\n",
-      "      \"Wenquan\",\n",
-      "      \"Lu\"\n",
-      "    ],\n",
-      "    [\n",
-      "      \"Susan J.\",\n",
-      "      \"Babinec\"\n",
-      "    ]\n",
-      "  ],\n",
-      "  \"associated_ids\": [\n",
-      "    \"https://doi.org/10.1016/j.jpowsour.2022.231127\"\n",
-      "  ],\n",
-      "  \"raw_data_columns\": {},\n",
-      "  \"cycle_stats_columns\": {}\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data.metadata.json(exclude_defaults=True, indent=2))"
    ]
