Break cells between "refined" used in dataset and other

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -32,10 +32,12 @@
     "from batdata.schemas.battery import ElectrodeDescription, ElectrolyteDescription, BatteryDescription\n",
     "from batdata.schemas import BatteryMetadata\n",
     "from batdata.data import BatteryDataset\n",
+    "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
     "from shutil import rmtree\n",
     "from tqdm.auto import tqdm\n",
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -346,16 +348,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0f7ec4-8be7-49e8-842a-83504794042f",
+   "id": "9ba0fa7d-264c-4124-a3dc-ed06cbe02c08",
    "metadata": {},
    "source": [
-    "### Filter down to best-documented cells\n",
-    "Get only the test descriptions where we have the \"Batch\" described in the cell descriptions"
+    "## Get the Cells from the Paper\n",
+    "Get the cells that are listed in a table from Noah Paulson, describing the source fo the data in Table S1 of [our paper](https://www.sciencedirect.com/science/article/pii/S0378775322001495#appsec1)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "441d814a-66ed-4885-bd8d-6a0b1f91ae91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 300 known cells\n"
+     ]
+    }
+   ],
+   "source": [
+    "known_cells = pd.read_csv('raw-data/known-cells.csv')\n",
+    "print(f'Loaded {len(known_cells)} known cells')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6f2f0b3-03eb-4711-b634-6dc2d14705f6",
+   "metadata": {},
+   "source": [
+    "Go from filename to batch name and cell number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7bba0429-b987-451f-ae6f-33f01eb16bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "known_cells['cell_number'] = known_cells['cellname'].str.split(\"_\").apply(lambda x: x[2])\n",
+    "known_cells['batch'] = known_cells['cellname'].str.split(\"_\").apply(lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb0f7ec4-8be7-49e8-842a-83504794042f",
+   "metadata": {},
+   "source": [
+    "## Filter down to best-documented cells\n",
+    "Get only the test descriptions where we have the \"Batch\" described in the cell descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "64e14d71-9ddf-4bf1-bb58-bd40c8051b6c",
    "metadata": {},
    "outputs": [],
@@ -365,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "da34a048-fd2b-4a35-b866-46cd3470069e",
    "metadata": {},
    "outputs": [
@@ -383,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b1ca600b-3449-4f3a-9822-f3c8dfc70612",
    "metadata": {},
    "outputs": [],
@@ -393,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "edbb3383-a6b0-4cbc-9ad1-4b4646d9267d",
    "metadata": {},
    "outputs": [
@@ -411,17 +460,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a92ac5b-0afa-42d9-b0b9-0d93b1baadf9",
+   "id": "85e4e3e0-2008-435f-abab-b2164ca773f6",
    "metadata": {},
    "source": [
-    "### Filter out formation tests\n",
+    "## Remove Formation Tests\n",
     "Get tests that do not have \"formation\" in the procedure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0e8c6958-ee59-4722-b14c-ef4cee97dad2",
+   "execution_count": 11,
+   "id": "5be1ba5c-331a-492a-9197-a1207297e7cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f1620d35-a9e8-4b2e-8bc9-8cc194de5807",
+   "execution_count": 12,
+   "id": "a13dc911-c26f-4317-8995-fe1656fae274",
    "metadata": {},
    "outputs": [
     {
@@ -448,18 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "eb5129c5-9696-4a11-807d-0069f590a7bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_descriptions = test_descriptions[~is_formation]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f25d9606-fae0-4916-981f-772b470d96b9",
+   "execution_count": 13,
+   "id": "d3ce5407-abbe-443d-942b-2e0a8b46c249",
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +510,7 @@
     }
    ],
    "source": [
+    "test_descriptions = test_descriptions[~is_formation]\n",
     "print(f'There is a total of {len(test_descriptions[[\"Batch\", \"Cell Number\"]].value_counts())} unique cells')"
    ]
   },
@@ -494,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "512f01bb-31ab-4ddd-9519-cdaed481a317",
    "metadata": {},
    "outputs": [
@@ -524,7 +564,7 @@
        "Name: 205, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "437a344a-1914-4357-8b9b-660c1ef64e91",
    "metadata": {},
    "outputs": [
@@ -575,7 +615,7 @@
        "Name: 20, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "89b6bc5d-0d8f-41ae-b43e-5a548b02aafd",
    "metadata": {},
    "outputs": [
@@ -638,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "c3791f19-c058-46c2-b66f-7aa2d491daae",
    "metadata": {},
    "outputs": [
@@ -663,7 +703,7 @@
        " 'nominal_capacity': 0.3}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f6a4c1c3-ee46-435f-929f-dcaadd941759",
    "metadata": {},
    "outputs": [],
@@ -749,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "146a2fb6-81ba-4db9-8958-1d3fcb9eabfc",
    "metadata": {},
    "outputs": [
@@ -824,7 +864,7 @@
        "1  0.000000           0  ControlMethod.rest              0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "47cf5cb0-f107-45c9-87f2-f1433efd1242",
    "metadata": {},
    "outputs": [],
@@ -856,8 +896,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28af2ecc-209b-4ba6-b776-e1b4adb09a0b",
+   "metadata": {},
+   "source": [
+    "Make a function we can run in parallel"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "694c67c7-9576-4408-8128-684689e71605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_cell(extractor: MACCORExtractor, files: list[str], metadata: BatteryMetadata, path: str):\n",
+    "    \"\"\"Convert then save to HDF5 format\"\"\"\n",
+    "    \n",
+    "    data = extractor.parse_to_dataframe(files, metadata=metadata)\n",
+    "    data.to_batdata_hdf(path, complevel=9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "4fdfdbc8-6be0-49e6-b774-f588c422840b",
    "metadata": {},
    "outputs": [
@@ -865,17 +927,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "successes=560:  98%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▍   | 561/570 [31:16<00:25,  2.82s/it]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 570/570 [02:22<00:00,  3.99it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Succeeded in parsing 569 cells\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "success_count = 0\n",
+    "refined = 0\n",
+    "futures = []\n",
     "failures = []\n",
-    "iterator = tqdm(test_descriptions.groupby(['Batch', 'Cell Number']), desc='successes=0')\n",
-    "for (batch_id, cell_id), group in iterator:\n",
-    "    \n",
-    "    try:\n",
+    "known_cells['matched'] = False\n",
+    "with ProcessPoolExecutor() as exc:\n",
+    "    for (batch_id, cell_id), group in test_descriptions.groupby(['Batch', 'Cell Number']):\n",
+    "        # Determine if this is in the \"refined\" set\n",
+    "        known_matches = np.logical_and(known_cells.batch == batch_id, known_cells.cell_number == cell_id)\n",
+    "        known_cells.loc[known_matches, 'matched'] = True\n",
+    "        is_refined = known_matches.any()\n",
+    "        if is_refined:\n",
+    "            refined += 1\n",
+    "\n",
     "        # Get the metadata for the cell \n",
     "        cell_name = f'batch_{batch_id}_cell_{cell_id}'\n",
     "        cell_metadata = describe_cell(group.iloc[0])\n",
@@ -884,14 +967,16 @@
     "        metadata = BatteryMetadata(\n",
     "            name=f'CAMP_{cell_name}',\n",
     "            battery=cell_metadata,\n",
-    "            dataset_name='paulson_2019',\n",
+    "            dataset_name='camp_2023',\n",
     "            authors=[\n",
-    "                ['Noah H.', 'Paulson'],\n",
-    "                ['Joseph', 'Kubal'],\n",
     "                ['Logan', 'Ward'],\n",
-    "                ['Saurabh', 'Saxena'],\n",
+    "                ['Joseph', 'Kubal'],\n",
+    "                ['Susan J.', 'Babinec'],\n",
     "                ['Wenquan', 'Lu'],\n",
-    "                ['Susan J.', 'Babinec']\n",
+    "                ['Allison', 'Dunlop'],\n",
+    "                ['Steve', 'Trask'],\n",
+    "                ['Andrew', 'Jansen'],\n",
+    "                ['Noah H.', 'Paulson'],\n",
     "            ],\n",
     "            associated_ids=['https://doi.org/10.1016/j.jpowsour.2022.231127']\n",
     "        )\n",
@@ -899,19 +984,27 @@
     "        # Get the test results\n",
     "        files = group['File Name'].apply(lambda x: data_path / x).tolist()\n",
     "\n",
-    "        # Parse them\n",
-    "        data = extractor.parse_to_dataframe(files, metadata=metadata)\n",
-    "    except Exception as exc:\n",
-    "        record = group.iloc[0].to_dict()\n",
-    "        record['reason'] = str(exc)\n",
-    "        failures.append(record)\n",
-    "        continue\n",
+    "        # Determine the path to save the file\n",
+    "        name = f'{cell_name}.h5'\n",
+    "        sub_dir = 'refined' if is_refined else 'other'\n",
+    "        (h5_path / sub_dir).mkdir(exist_ok=True)\n",
+    "        save_path = h5_path / sub_dir / name\n",
+    "    \n",
+    "        # Submit to be processed: \n",
+    "        future = exc.submit(process_cell, extractor, files, metadata, save_path)\n",
+    "        future.record = group.iloc[0].to_dict()\n",
+    "        futures.append(future)\n",
     "\n",
-    "    # Save it to the HDF5 format\n",
-    "    name = f'{cell_name}.h5'\n",
-    "    data.to_batdata_hdf(h5_path / name, complevel=9)\n",
-    "    success_count += 1\n",
-    "    iterator.set_description(f'successes={success_count}')\n",
+    "    # Collect results\n",
+    "    success_count = 0\n",
+    "    for future in tqdm(as_completed(futures), total=len(futures)):\n",
+    "        exc = future.exception()\n",
+    "        if exc is not None:\n",
+    "            record = future.record\n",
+    "            record['reason'] = str(exc)\n",
+    "            failures.append(record)\n",
+    "        else:\n",
+    "            success_count += 1\n",
     "failures = pd.DataFrame(failures)\n",
     "print(f'Succeeded in parsing {success_count} cells')"
    ]
@@ -926,12 +1019,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "be458191-b47d-44f1-a66f-2ebc762383a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "failures.to_csv('failures.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f695ef-6f31-4bfd-abda-12985c30b0f3",
+   "metadata": {},
+   "source": [
+    "Make sure we found all cells from Noah's paper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4eb0e7ea-e733-45e8-bf99-154affdb61a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matched 278/300 known cells\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_matched = known_cells['matched'].sum()\n",
+    "print(f'Matched {n_matched}/{len(known_cells)} known cells')"
    ]
   },
   {
@@ -944,17 +1064,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b2ddd741-eea4-4d35-a30c-a7ae2f614dc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_cell = next(h5_path.glob('*.h5'))"
+    "example_cell = './data/refined/batch_B1A_cell_4.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "db14e3fc-a649-45f2-8f33-d6954cbb0e09",
    "metadata": {},
    "outputs": [],
@@ -964,10 +1084,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "42cc8330-bd3e-47ea-91d3-ebcdf371c02d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"name\": \"CAMP_batch_B1A_cell_4\",\n",
+      "  \"battery\": {\n",
+      "    \"layer_count\": 12,\n",
+      "    \"anode\": {\n",
+      "      \"name\": \"C\",\n",
+      "      \"supplier\": \"Conoco-Phillips\",\n",
+      "      \"product\": \"A12\",\n",
+      "      \"thickness\": 86.0,\n",
+      "      \"loading\": 5.75,\n",
+      "      \"porosity\": 35.0\n",
+      "    },\n",
+      "    \"cathode\": {\n",
+      "      \"name\": \"HE5050\",\n",
+      "      \"supplier\": \"Toda\",\n",
+      "      \"product\": \"TodaHE5050_NHE\",\n",
+      "      \"thickness\": 63.0,\n",
+      "      \"area\": 169.2,\n",
+      "      \"loading\": 14.3,\n",
+      "      \"porosity\": 38.0\n",
+      "    },\n",
+      "    \"electrolyte\": {\n",
+      "      \"name\": \"Gen 2\",\n",
+      "      \"additives\": []\n",
+      "    },\n",
+      "    \"nominal_capacity\": 0.3\n",
+      "  },\n",
+      "  \"dataset_name\": \"camp_2023\",\n",
+      "  \"authors\": [\n",
+      "    [\n",
+      "      \"Logan\",\n",
+      "      \"Ward\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Joseph\",\n",
+      "      \"Kubal\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Susan J.\",\n",
+      "      \"Babinec\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Wenquan\",\n",
+      "      \"Lu\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Allison\",\n",
+      "      \"Dunlop\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Steve\",\n",
+      "      \"Trask\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Andrew\",\n",
+      "      \"Jansen\"\n",
+      "    ],\n",
+      "    [\n",
+      "      \"Noah H.\",\n",
+      "      \"Paulson\"\n",
+      "    ]\n",
+      "  ],\n",
+      "  \"associated_ids\": [\n",
+      "    \"https://doi.org/10.1016/j.jpowsour.2022.231127\"\n",
+      "  ],\n",
+      "  \"raw_data_columns\": {},\n",
+      "  \"cycle_stats_columns\": {}\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(data.metadata.json(exclude_defaults=True, indent=2))"
    ]
