Update with the new cells

--- a/1_add-derived-features.ipynb
+++ b/1_add-derived-features.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = BatteryDataset.from_batdata_hdf('./data/batch_B28B_cell_2.h5')"
+    "dataset = BatteryDataset.from_batdata_hdf('./data/refined/batch_B28B_cell_2.h5')"
    ]
   },
   {
@@ -286,13 +286,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "569it [01:06,  8.57it/s]\n"
+      "569it [01:04,  8.78it/s]\n"
      ]
     }
    ],
    "source": [
     "with ProcessPoolExecutor() as exc:\n",
-    "    for _ in tqdm(exc.map(func, Path(hdf5_path).glob('*.h5'))):\n",
+    "    for _ in tqdm(exc.map(func, Path(hdf5_path).rglob('*.h5'))):\n",
     "        pass"
    ]
   },
@@ -312,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = BatteryDataset.from_batdata_hdf('./data/batch_B28B_cell_2.h5')"
+    "dataset = BatteryDataset.from_batdata_hdf('./data/refined/batch_B28B_cell_2.h5')"
    ]
   },
   {
