Update with newer cell metadata

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -8,8 +8,9 @@
     "# Creating Archive-Ready Metadata\n",
     "The raw data is split into a few different files:\n",
     "- [A mapping of tests to filenames](./raw-data/Summary_of_CAMP_Cells.xlsx)\n",
-    "- [A mapping of tests to battery design](./raw-data/Summary_of_builds_JK.xlsx)\n",
-    "- The actual raw data from the machines in MACCOR format"
+    "- [A mapping of tests to battery design](./raw-data/Summary_of_builds.xlsx)\n",
+    "- The actual raw data from the machines in MACCOR format\n",
+    "- [A list of the cells used by Paulson et al.](./raw-data/known-cells.csv)"
    ]
   },
   {
@@ -238,15 +239,15 @@
        "      <th>build</th>\n",
        "      <th>anode</th>\n",
        "      <th>cathode</th>\n",
-       "      <th>description</th>\n",
+       "      <th>cathode_full_name</th>\n",
+       "      <th>cathode_supplier</th>\n",
+       "      <th>anode_full_name</th>\n",
+       "      <th>anode_supplier</th>\n",
        "      <th>electrolyte</th>\n",
        "      <th>electrolyte_additive</th>\n",
        "      <th>total_cathode_area (cm2)</th>\n",
-       "      <th>number_layers</th>\n",
-       "      <th>anode_supplier</th>\n",
-       "      <th>anode_mat_name</th>\n",
        "      <th>...</th>\n",
-       "      <th>cathode_supplier.1</th>\n",
+       "      <th>number_interfaces</th>\n",
        "      <th>target_capacity (Ah)</th>\n",
        "      <th>anode_thickness (um)</th>\n",
        "      <th>anode_loading (mg/cm2)</th>\n",
@@ -264,23 +265,23 @@
        "      <td>B1</td>\n",
        "      <td>C</td>\n",
        "      <td>HE5050</td>\n",
-       "      <td>A12 vs. Toda HE5050</td>\n",
+       "      <td>HE5050</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>Graphite</td>\n",
+       "      <td>Commercial</td>\n",
        "      <td>Gen 2</td>\n",
        "      <td>NONE</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Conoco-Phillips</td>\n",
-       "      <td>A12</td>\n",
        "      <td>...</td>\n",
-       "      <td>TodaHE5050</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.375</td>\n",
-       "      <td>86</td>\n",
+       "      <td>86.0</td>\n",
        "      <td>5.75</td>\n",
-       "      <td>35</td>\n",
-       "      <td>68</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>68.0</td>\n",
        "      <td>14.5</td>\n",
-       "      <td>42</td>\n",
-       "      <td>30</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>30.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -288,23 +289,23 @@
        "      <td>B1A</td>\n",
        "      <td>C</td>\n",
        "      <td>HE5050</td>\n",
-       "      <td>A12 vs. Toda HE5050</td>\n",
+       "      <td>HE5050</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>Graphite</td>\n",
+       "      <td>Commercial</td>\n",
        "      <td>Gen 2</td>\n",
        "      <td>NONE</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Conoco-Phillips</td>\n",
-       "      <td>A12</td>\n",
        "      <td>...</td>\n",
-       "      <td>TodaHE5050</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.375</td>\n",
-       "      <td>86</td>\n",
+       "      <td>86.0</td>\n",
        "      <td>5.75</td>\n",
-       "      <td>35</td>\n",
-       "      <td>68</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>68.0</td>\n",
        "      <td>14.5</td>\n",
-       "      <td>42</td>\n",
-       "      <td>30</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>30.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -313,25 +314,25 @@
        "</div>"
       ],
       "text/plain": [
-       "  build anode cathode          description electrolyte electrolyte_additive  \\\n",
-       "0    B1     C  HE5050  A12 vs. Toda HE5050       Gen 2                 NONE   \n",
-       "1   B1A     C  HE5050  A12 vs. Toda HE5050       Gen 2                 NONE   \n",
+       "  build anode cathode cathode_full_name cathode_supplier anode_full_name  \\\n",
+       "0    B1     C  HE5050            HE5050       Commercial        Graphite   \n",
+       "1   B1A     C  HE5050            HE5050       Commercial        Graphite   \n",
        "\n",
-       "  total_cathode_area (cm2) number_layers   anode_supplier anode_mat_name  ...  \\\n",
-       "0                      NaN           NaN  Conoco-Phillips            A12  ...   \n",
-       "1                      NaN           NaN  Conoco-Phillips            A12  ...   \n",
+       "  anode_supplier electrolyte electrolyte_additive  total_cathode_area (cm2)  \\\n",
+       "0     Commercial       Gen 2                 NONE                       NaN   \n",
+       "1     Commercial       Gen 2                 NONE                       NaN   \n",
        "\n",
-       "  cathode_supplier.1 target_capacity (Ah) anode_thickness (um)  \\\n",
-       "0         TodaHE5050                0.375                   86   \n",
-       "1         TodaHE5050                0.375                   86   \n",
+       "   ...  number_interfaces  target_capacity (Ah)  anode_thickness (um)  \\\n",
+       "0  ...                NaN                 0.375                  86.0   \n",
+       "1  ...                NaN                 0.375                  86.0   \n",
        "\n",
-       "  anode_loading (mg/cm2) anode_porosity cathode_thickness (um)  \\\n",
-       "0                   5.75             35                     68   \n",
-       "1                   5.75             35                     68   \n",
+       "   anode_loading (mg/cm2)  anode_porosity  cathode_thickness (um)  \\\n",
+       "0                    5.75            35.0                    68.0   \n",
+       "1                    5.75            35.0                    68.0   \n",
        "\n",
-       "  cathode_loading (mg/cm2) cathode_porosity temperature (C) Notes  \n",
-       "0                     14.5               42              30   NaN  \n",
-       "1                     14.5               42              30   NaN  \n",
+       "   cathode_loading (mg/cm2)  cathode_porosity  temperature (C)  Notes  \n",
+       "0                      14.5              42.0             30.0    NaN  \n",
+       "1                      14.5              42.0             30.0    NaN  \n",
        "\n",
        "[2 rows x 21 columns]"
       ]
@@ -342,7 +343,7 @@
     }
    ],
    "source": [
-    "cell_descriptions = pd.read_excel('raw-data/Summary_of_builds_JK.xlsx')\n",
+    "cell_descriptions = pd.read_excel('raw-data/Summary_of_builds.xlsx')\n",
     "cell_descriptions.head(2)"
    ]
   },
@@ -422,7 +423,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found descriptions for 3409/8618 tests\n"
+      "Found descriptions for 3544/8618 tests\n"
      ]
     }
    ],
@@ -450,7 +451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is a total of 611 unique cells\n"
+      "There is a total of 645 unique cells\n"
      ]
     }
    ],
@@ -487,7 +488,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 628/3409 formation experiments\n"
+      "Found 667/3544 formation experiments\n"
      ]
     }
    ],
@@ -505,7 +506,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is a total of 570 unique cells\n"
+      "There is a total of 602 unique cells\n"
      ]
     }
    ],
@@ -591,28 +592,28 @@
     {
      "data": {
       "text/plain": [
-       "build                                        B12A\n",
-       "anode                                           C\n",
-       "cathode                                    HE5050\n",
-       "description                 A12 vs. Toda NHE-5050\n",
-       "electrolyte                                 Gen 2\n",
-       "electrolyte_additive                         NONE\n",
-       "total_cathode_area (cm2)                    169.2\n",
-       "number_layers                                  12\n",
-       "anode_supplier                    Conoco-Phillips\n",
-       "anode_mat_name                                A12\n",
-       "cathode_supplier                             Toda\n",
-       "cathode_supplier.1                 TodaHE5050_NHE\n",
-       "target_capacity (Ah)                          0.3\n",
-       "anode_thickness (um)                           86\n",
-       "anode_loading (mg/cm2)                       5.75\n",
-       "anode_porosity                                 35\n",
-       "cathode_thickness (um)                         63\n",
-       "cathode_loading (mg/cm2)                     14.3\n",
-       "cathode_porosity                               38\n",
-       "temperature (C)                                30\n",
-       "Notes                                         NaN\n",
-       "Name: 20, dtype: object"
+       "build                             B12A\n",
+       "anode                                C\n",
+       "cathode                         HE5050\n",
+       "cathode_full_name               HE5050\n",
+       "cathode_supplier            Commercial\n",
+       "anode_full_name               Graphite\n",
+       "anode_supplier              Commercial\n",
+       "electrolyte                      Gen 2\n",
+       "electrolyte_additive              NONE\n",
+       "total_cathode_area (cm2)         169.2\n",
+       "number_layers                     13.0\n",
+       "number_interfaces                 12.0\n",
+       "target_capacity (Ah)               0.3\n",
+       "anode_thickness (um)              86.0\n",
+       "anode_loading (mg/cm2)            5.75\n",
+       "anode_porosity                    35.0\n",
+       "cathode_thickness (um)            63.0\n",
+       "cathode_loading (mg/cm2)          14.3\n",
+       "cathode_porosity                  38.0\n",
+       "temperature (C)                   30.0\n",
+       "Notes                              NaN\n",
+       "Name: 21, dtype: object"
       ]
      },
      "execution_count": 15,
@@ -645,8 +646,8 @@
      "text": [
       "{\n",
       "  \"name\": \"HE5050\",\n",
-      "  \"supplier\": \"Toda\",\n",
-      "  \"product\": \"TodaHE5050_NHE\",\n",
+      "  \"supplier\": \"Commercial\",\n",
+      "  \"product\": null,\n",
       "  \"thickness\": 63.0,\n",
       "  \"area\": 169.2,\n",
       "  \"loading\": 14.3,\n",
@@ -659,7 +660,6 @@
     "cathode_metadata = ElectrodeDescription(\n",
     "    name=cell_metadata['cathode'],\n",
     "    supplier=cell_metadata['cathode_supplier'],\n",
-    "    product=cell_metadata['cathode_supplier.1'],\n",
     "    thickness=cell_metadata['cathode_thickness (um)'],\n",
     "    area=cell_metadata['total_cathode_area (cm2)'],\n",
     "    loading=cell_metadata['cathode_loading (mg/cm2)'],\n",
@@ -685,16 +685,15 @@
     {
      "data": {
       "text/plain": [
-       "{'layer_count': 12,\n",
+       "{'layer_count': 13.0,\n",
        " 'anode': {'name': 'C',\n",
-       "  'supplier': 'Conoco-Phillips',\n",
-       "  'product': 'A12',\n",
+       "  'supplier': 'Commercial',\n",
+       "  'product': 'Graphite',\n",
        "  'thickness': 86.0,\n",
        "  'loading': 5.75,\n",
        "  'porosity': 35.0},\n",
        " 'cathode': {'name': 'HE5050',\n",
-       "  'supplier': 'Toda',\n",
-       "  'product': 'TodaHE5050_NHE',\n",
+       "  'supplier': 'Commercial',\n",
        "  'thickness': 63.0,\n",
        "  'area': 169.2,\n",
        "  'loading': 14.3,\n",
@@ -730,7 +729,6 @@
     "        cathode_metadata = ElectrodeDescription(\n",
     "            name=cell_metadata['cathode'],\n",
     "            supplier=cell_metadata['cathode_supplier'],\n",
-    "            product=cell_metadata['cathode_supplier.1'],\n",
     "            thickness=cell_metadata['cathode_thickness (um)'],\n",
     "            area=cell_metadata['total_cathode_area (cm2)'],\n",
     "            loading=cell_metadata['cathode_loading (mg/cm2)'],\n",
@@ -740,7 +738,7 @@
     "        anode_metadata = ElectrodeDescription(\n",
     "            name=cell_metadata['anode'],\n",
     "            supplier=cell_metadata['anode_supplier'],\n",
-    "            product=cell_metadata['anode_mat_name'],\n",
+    "            product=cell_metadata['anode_full_name'],\n",
     "            thickness=cell_metadata['anode_thickness (um)'],\n",
     "            loading=cell_metadata['anode_loading (mg/cm2)'],\n",
     "            porosity=cell_metadata['anode_porosity']\n",
@@ -886,13 +884,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "47cf5cb0-f107-45c9-87f2-f1433efd1242",
+   "id": "55d5cd2c-2d4a-41e2-a138-6da9bcc3bdf0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if h5_path.is_dir():\n",
-    "    rmtree(h5_path)\n",
-    "h5_path.mkdir()"
+    "for path in h5_path.iterdir():\n",
+    "    if path.is_dir():\n",
+    "        rmtree(path)"
    ]
   },
   {
@@ -927,14 +925,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 570/570 [02:22<00:00,  3.99it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [02:40<00:00,  3.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succeeded in parsing 569 cells\n"
+      "Succeeded in parsing 601 cells\n"
      ]
     },
     {
@@ -1045,7 +1043,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matched 278/300 known cells\n"
+      "Matched 300/300 known cells\n"
      ]
     }
    ],
@@ -1095,19 +1093,18 @@
       "{\n",
       "  \"name\": \"CAMP_batch_B1A_cell_4\",\n",
       "  \"battery\": {\n",
-      "    \"layer_count\": 12,\n",
+      "    \"layer_count\": 13,\n",
       "    \"anode\": {\n",
       "      \"name\": \"C\",\n",
-      "      \"supplier\": \"Conoco-Phillips\",\n",
-      "      \"product\": \"A12\",\n",
+      "      \"supplier\": \"Commercial\",\n",
+      "      \"product\": \"Graphite\",\n",
       "      \"thickness\": 86.0,\n",
       "      \"loading\": 5.75,\n",
       "      \"porosity\": 35.0\n",
       "    },\n",
       "    \"cathode\": {\n",
       "      \"name\": \"HE5050\",\n",
-      "      \"supplier\": \"Toda\",\n",
-      "      \"product\": \"TodaHE5050_NHE\",\n",
+      "      \"supplier\": \"Commercial\",\n",
       "      \"thickness\": 63.0,\n",
       "      \"area\": 169.2,\n",
       "      \"loading\": 14.3,\n",
